--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
     <span class="center">Like my Project? Support on GitHub 
         <a target="_blank" href="https://github.com/shakeelansari63/cowin-slots">
-            <i class="fab fa-github"></i>
+            <mat-icon>favorite</mat-icon>
         </a>
     </span>
 </mat-toolbar>
