--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
     <span>Cowin Slots Finder</span>
     <span class="header-spacer"></span>
-    <a mat-icon-button target="_blank" href="https://github.com/shakeelansari63/cowin-slots"><mat-icon>thumb_up</mat-icon></a>
+    <a mat-icon-button target="_blank" href="https://github.com/shakeelansari63/cowin-slots">
+        <mat-icon>thumb_up</mat-icon>
+    </a>
 </mat-toolbar>
