Remove Font-awesome dependency

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <span class="center">Like my Project? Support on GitHub 
-        <a target="_blank" href="https://github.com/shakeelansari63/cowin-slots">
+        <a mat-icon-button target="_blank" href="https://github.com/shakeelansari63/cowin-slots">
             <mat-icon>favorite</mat-icon>
         </a>
     </span>
