--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
-    <span class="center">Like my Project? Support on GitHub 
+    <div class="center">Like my Project? Support on GitHub
         <a mat-icon-button target="_blank" href="https://github.com/shakeelansari63/cowin-slots">
-            <mat-icon>favorite</mat-icon>
+            <fa-icon [icon]="faGithub" [ngStyle]="{'fontSize': '1.5rem'}"></fa-icon>
         </a>
-    </span>
+    </div>
 </mat-toolbar>
