Setup District Form

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <div class="center">Like my Project? Support on GitHub
+    <div class="center">Liked it? Support on GitHub
         <a mat-icon-button target="_blank" href="https://github.com/shakeelansari63/cowin-slots">
             <fa-icon [icon]="faGithub" [ngStyle]="{'fontSize': '1.5rem'}"></fa-icon>
         </a>
