--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0px auto;
+  overflow: auto;
+  padding: 0px 40px;
+}
+
+mat-form-field {
+  width: 100%;
+}
