--- a/src/app/components/search-by-dist-form/search-by-dist-form.component.html
+++ b/src/app/components/search-by-dist-form/search-by-dist-form.component.html
@@ -1,30 +1,32 @@
-<form>
-    <div>
-    <mat-form-field appearance="fill">
-        <mat-label>State</mat-label>
-        <mat-select (selectionChange)="getDistricts()" [(value)]="selectedState" name="states">
-            <mat-option *ngFor="let state of statesList" [value]="state.state_id">{{ state.state_name }}</mat-option>
-        </mat-select>
-    </mat-form-field>
-    </div>
-    <div>
-    <mat-form-field appearance="fill" *ngIf="selectedState">
-        <mat-label>District</mat-label>
-        <mat-select [(value)]="selectedDist" name="district">
-            <mat-option *ngFor="let dist of distList" [value]="dist.district_id">{{ dist.district_name }}</mat-option>
-        </mat-select>
-    </mat-form-field>
-    </div>
-    <div>
-    <mat-form-field appearance="fill">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="picker" [(value)]="selectedDate">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-    </div>
-    <button mat-raised-button color="primary" type="submit">
-        <mat-icon>search</mat-icon> 
-        Search Slots
-    </button>
-</form>
+<div class="container">
+    <form (ngSubmit)="searchByDist()">
+        <div>
+        <mat-form-field appearance="fill">
+            <mat-label>State</mat-label>
+            <mat-select (selectionChange)="getDistricts()" [(value)]="selectedState" name="states">
+                <mat-option *ngFor="let state of statesList" [value]="state.state_id">{{ state.state_name }}</mat-option>
+            </mat-select>
+        </mat-form-field>
+        </div>
+        <div>
+        <mat-form-field appearance="fill" *ngIf="selectedState">
+            <mat-label>District</mat-label>
+            <mat-select [(value)]="selectedDist" name="district" (selectionChange)="viewSelectedDistrict()">
+                <mat-option *ngFor="let dist of distList" [value]="dist.district_id">{{ dist.district_name }}</mat-option>
+            </mat-select>
+        </mat-form-field>
+        </div>
+        <div>
+        <mat-form-field appearance="fill">
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker" [(value)]="selectedDate" [min]="todayDate">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        </div>
+        <button mat-raised-button color="primary" type="submit" [disabled]="selectedDist === 0">
+            <mat-icon>search</mat-icon> 
+            Search Slots
+        </button>
+    </form>
+</div>
