--- a/src/app/components/slot-detail/slot-detail.component.css
+++ b/src/app/components/slot-detail/slot-detail.component.css
@@ -5,11 +5,15 @@
 .pill {
   border-radius: 20px;
   font-weight: bold;
-  width: 7rem;
-  height: 1.2rem;
+  width: 4rem;
+  height: 1.1rem;
   text-align: center;
+  font-size: 0.6rem;
+  padding: 0px;
+}
+
+.pill > p {
   margin: auto;
-  padding: 5px;
 }
 
 .covishield {
@@ -29,7 +33,7 @@
 
 .slot-card-head {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 8fr;
 }
 
 .slot-card-head > .pill {
@@ -37,7 +41,8 @@
 }
 
 .mat-badge-content {
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
+  width: 1.2rem;
+  height: 1.2rem;
+  line-height: 1.2rem;
+  font-size: 0.5rem;
 }
