--- a/src/app/components/form-tabs/form-tabs.component.html
+++ b/src/app/components/form-tabs/form-tabs.component.html
@@ -1,7 +1,16 @@
 <mat-tab-group>
-    <mat-tab label="Search by District"> <app-search-by-dist-form (searchSubmit)="searchByDistrict($event)"></app-search-by-dist-form> </mat-tab>
-    <mat-tab label="Search by Pin Code"> <app-search-by-pin-form></app-search-by-pin-form> </mat-tab>
+    <mat-tab label="Search by District">
+        <app-search-by-dist-form 
+            (searchSubmit)="searchByDistrict($event)"
+            (resetSlots)="resetSlots()"></app-search-by-dist-form>
+    </mat-tab>
+    <mat-tab label="Search by Pin Code">
+        <app-search-by-pin-form
+        (searchSubmit)="searchByPincode($event)"
+        (resetSlots)="resetSlots()"></app-search-by-pin-form>
+    </mat-tab>
 </mat-tab-group>
+<app-quick-filters></app-quick-filters>
 <div class="container">
     <app-slots-list [slots]="slotsList"></app-slots-list>
 </div>
