--- a/src/app/components/search-by-pin-form/search-by-pin-form.component.html
+++ b/src/app/components/search-by-pin-form/search-by-pin-form.component.html
@@ -1,1 +1,22 @@
-<p>search-by-pin-form works!</p>
+<div class="container top15">
+    <form (ngSubmit)="searchByPincode()">
+        <div>
+            <mat-form-field appearance="fill">
+                <mat-label>Pincode</mat-label>
+                <input matInput placeholder="Ex. 440001" [(ngModel)]="inPincode" name="pincode">
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field appearance="fill">
+                <mat-label>Choose a date</mat-label>
+                <input matInput [matDatepicker]="picker" [(value)]="selectedDate" [min]="todayDate">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+        </div>
+        <button mat-raised-button color="primary" type="submit" [disabled]="inPincode === ''">
+            <mat-icon>search</mat-icon> 
+            Search Slots
+        </button>
+    </form>
+</div>
