--- a/src/app/components/search-by-pin-form/search-by-pin-form.component.html
+++ b/src/app/components/search-by-pin-form/search-by-pin-form.component.html
@@ -14,9 +14,15 @@
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </div>
-        <button mat-raised-button color="primary" type="submit" [disabled]="inPincode === ''">
-            <mat-icon>search</mat-icon> 
-            Search Slots
-        </button>
+        <div ngClass="btn-row">
+            <button mat-raised-button color="primary" type="submit" [disabled]="inPincode === ''">
+                <mat-icon>search</mat-icon> 
+                Search Slots
+            </button>
+            <button mat-raised-button color="warn" type="button" [disabled]="slotsList.length === 0" (click)="resetSlotsEvent()">
+                <mat-icon>clear_all</mat-icon> 
+                Clear Slots
+            </button>
+        </div>
     </form>
 </div>
