--- a/src/app/components/form-tabs/form-tabs.component.html
+++ b/src/app/components/form-tabs/form-tabs.component.html
@@ -1,16 +1,18 @@
-<mat-tab-group>
-    <mat-tab label="Search by District">
-        <app-search-by-dist-form 
-            (searchSubmit)="searchByDistrict($event)"
-            (resetSlots)="resetSlots()"></app-search-by-dist-form>
-    </mat-tab>
-    <mat-tab label="Search by Pin Code">
-        <app-search-by-pin-form
-        (searchSubmit)="searchByPincode($event)"
-        (resetSlots)="resetSlots()"></app-search-by-pin-form>
-    </mat-tab>
-</mat-tab-group>
-<app-quick-filters></app-quick-filters>
 <div class="container">
+    <mat-tab-group>
+        <mat-tab label="Search by District">
+            <app-search-by-dist-form 
+                (searchSubmit)="searchByDistrict($event)"
+                (resetSlots)="resetSlots()">
+            </app-search-by-dist-form>
+        </mat-tab>
+        <mat-tab label="Search by Pincode">
+            <app-search-by-pin-form
+                (searchSubmit)="searchByPincode($event)"
+                (resetSlots)="resetSlots()">
+            </app-search-by-pin-form>
+        </mat-tab>
+    </mat-tab-group>
+    <app-quick-filters></app-quick-filters>
     <app-slots-list [slots]="slotsList"></app-slots-list>
 </div>
