Add Quick Filters Button

--- a/src/app/components/search-by-dist-form/search-by-dist-form.component.html
+++ b/src/app/components/search-by-dist-form/search-by-dist-form.component.html
@@ -29,10 +29,10 @@
                 <mat-icon>search</mat-icon> 
                 Search Slots
             </button>
-            <button mat-raised-button color="warn" type="button" [disabled]="slotsList.length === 0" (click)="resetSlotsEvent()">
+            <!-- <button mat-raised-button color="warn" type="button" [disabled]="slotsList.length === 0" (click)="resetSlotsEvent()">
                 <mat-icon>clear_all</mat-icon> 
-                Clear Slots
-            </button>
+                Clear
+            </button> -->
         </div>
     </form>
 </div>
