--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 900px;
   margin: 0px auto;
   overflow: auto;
   padding: 0px 40px;
@@ -24,8 +24,22 @@ mat-form-field {
   margin-top: 15px;
 }
 
+.tb15 {
+  margin: 15px 0;
+}
+
+.tr15 {
+  margin-top: 15px;
+  margin-right: 15px;
+}
+
 .btn-row {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.flex {
+  display: flex;
   flex-wrap: wrap;
 }
