--- a/src/app/components/form-tabs/form-tabs.component.html
+++ b/src/app/components/form-tabs/form-tabs.component.html
@@ -1,17 +1,19 @@
-<mat-tab-group>
-    <mat-tab label="Search by District">
-        <app-search-by-dist-form 
-            (searchSubmit)="searchByDistrict($event)"
-            (resetSlots)="resetSlots()">
-        </app-search-by-dist-form>
-    </mat-tab>
-    <mat-tab label="Search by Pincode">
-        <app-search-by-pin-form
-            (searchSubmit)="searchByPincode($event)"
-            (resetSlots)="resetSlots()">
-        </app-search-by-pin-form>
-    </mat-tab>
-</mat-tab-group>
+<div class="container-large">
+    <mat-tab-group>
+        <mat-tab label="Search by District">
+            <app-search-by-dist-form 
+                (searchSubmit)="searchByDistrict($event)"
+                (resetSlots)="resetSlots()">
+            </app-search-by-dist-form>
+        </mat-tab>
+        <mat-tab label="Search by Pincode">
+            <app-search-by-pin-form
+                (searchSubmit)="searchByPincode($event)"
+                (resetSlots)="resetSlots()">
+            </app-search-by-pin-form>
+        </mat-tab>
+    </mat-tab-group>
+</div>
 <div class="container">
     <app-quick-filters></app-quick-filters>
     <app-slots-list [slots]="slotsList"></app-slots-list>
