--- a/src/app/components/form-tabs/form-tabs.component.html
+++ b/src/app/components/form-tabs/form-tabs.component.html
@@ -1,5 +1,5 @@
-<div class="container-large">
-    <mat-tab-group>
+<div class="container">
+    <mat-tab-group mat-align-tabs="center">
         <mat-tab label="Search by District">
             <app-search-by-dist-form 
                 (searchSubmit)="searchByDistrict($event)"
@@ -12,9 +12,12 @@
                 (resetSlots)="resetSlots()">
             </app-search-by-pin-form>
         </mat-tab>
+        <mat-tab label="Download Certificate" #certificateTab>
+            <app-download-certificate></app-download-certificate>
+        </mat-tab>
     </mat-tab-group>
 </div>
-<div class="container">
+<div class="container" *ngIf="!certificateTab.isActive">
     <app-quick-filters></app-quick-filters>
     <app-slots-list [slots]="slotsList"></app-slots-list>
 </div>
