--- a/src/app/components/search-by-pin-form/search-by-pin-form.component.html
+++ b/src/app/components/search-by-pin-form/search-by-pin-form.component.html
@@ -1,4 +1,4 @@
-<div class="container top15">
+<div class="top15">
     <form (ngSubmit)="searchByPincode()">
         <div>
             <mat-form-field appearance="fill">
@@ -9,7 +9,7 @@
         <div>
             <mat-form-field appearance="fill">
                 <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="picker" [(value)]="selectedDate" [min]="todayDate">
+                <input matInput [matDatepicker]="picker" [value]="selectedDate" [min]="todayDate">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
