--- a/src/app/components/download-certificate/download-certificate.component.html
+++ b/src/app/components/download-certificate/download-certificate.component.html
@@ -1,4 +1,4 @@
-<div class="top15">
+<div class="container top15">
     <form #certForm="ngForm" (ngSubmit)="downloadCertificate()">
         <div>
             <mat-form-field appearance="fill">
