--- a/src/app/components/form-tabs/form-tabs.component.html
+++ b/src/app/components/form-tabs/form-tabs.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <mat-tab-group mat-align-tabs="center">
+<div class="container-large">
+    <mat-tab-group mat-stretch-tabs>
         <mat-tab label="Search by District">
             <app-search-by-dist-form 
                 (searchSubmit)="searchByDistrict($event)"
