--- a/src/app/components/search-by-pin-form/search-by-pin-form.component.html
+++ b/src/app/components/search-by-pin-form/search-by-pin-form.component.html
@@ -1,4 +1,4 @@
-<div class="top15">
+<div class="container top15">
     <form (ngSubmit)="searchByPincode()">
         <div>
             <mat-form-field appearance="fill">
