Download Certificate from Reference Number

--- a/src/app/components/download-certificate/download-certificate.component.html
+++ b/src/app/components/download-certificate/download-certificate.component.html
@@ -37,3 +37,9 @@
         </div>
     </form>
 </div>
+<div *ngIf="apiLoading">
+    <mat-spinner 
+        color="warn"
+        diameter="20"
+        [ngStyle]="{'margin':'auto'}"></mat-spinner>
+</div>
